--- a/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/config.json
+++ b/src/main/resources/archetype-resources/src/main/resources/qooxdoo/__artifactId__/config/config.json
@@ -50,36 +50,26 @@
 
   "jobs" :
   {
-    // Uncomment the following entry to add a contrib or library to your
-    // project; make sure to adapt the path to the Manifest.json; if you are
-    // using a contrib: library, it will be downloaded into the path specified
-    // by the 'cache/downloads' config key
-    /*
-    "libraries" : 
-    {
-      "library" :
-      [
-        {
-          "manifest" : "contrib://SkeletonApplication/trunk/Manifest.json"
-        }
-      ]
-    }
-    */
-
-    // If you want to tweak a job setting, see the following sample where
-    // the "format" feature of the "build-script" job is overridden.
-    // To see a list of available jobs, invoke 'generate.py x'.
-	/*
-    ,"build-script" :
-    {
-      "compile-options" : 
-      {
-        "code" :
-        {
-          "format" : false
-        }
-      }
-    }
-    */
+	  // The following is for being able to separate the test classes directory 
+	  // from the main application classes directory
+	  "test" :
+	    {
+	      "library" :
+	      [
+	        {
+	          "manifest"   : "./UnitTestManifest.json"
+	        }
+	       ]
+	    },
+	    "test-source" :
+	    {
+	      "library" :
+	      [
+	        {
+	          "manifest"   : "./UnitTestManifest.json"
+	        }
+	       ]
+	    }
+	    
   }
 }
