--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.qooxdoo</groupId>
-  <artifactId>qooxdoo-archetype-gui</artifactId>
-  <version>1.6-SNAPSHOT</version>
+  <artifactId>qooxdoo-archetype-desktop</artifactId>
+  <version>2.0-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
-  <name>qooxdoo-archetype-gui</name>
+  <name>qooxdoo-archetype-desktop</name>
   <description>An archetype to create a qooxdoo application</description>
 
   <parent>
@@ -17,9 +17,9 @@
   </parent>
 
   <scm>
-    <connection>scm:git:git://github.com/salmon-charles/qooxdoo-archetype-gui.git</connection>
-    <developerConnection>scm:git:git@github.com:salmon-charles/qooxdoo-archetype-gui.git</developerConnection>
-    <url>https://github.com/salmon-charles/qooxdoo-archetype-gui</url>
+    <connection>scm:git:git://github.com/salmon-charles/qooxdoo-archetype-desktop.git</connection>
+    <developerConnection>scm:git:git@github.com:salmon-charles/qooxdoo-archetype-desktop.git</developerConnection>
+    <url>https://github.com/salmon-charles/qooxdoo-archetype-desktop</url>
   </scm>
 
   <build>
