--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.qooxdoo</groupId>
   <artifactId>qooxdoo-archetype-desktop</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0-RC1-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
 
   <name>qooxdoo-archetype-desktop</name>
@@ -13,7 +13,7 @@
   <parent>
     <groupId>org.qooxdoo</groupId>
     <artifactId>qooxdoo-maven-parent</artifactId>
-    <version>1.5</version>
+    <version>1.6</version>
   </parent>
 
   <scm>
