--- a/pom.xml
+++ b/pom.xml
@@ -1,43 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.qooxdoo</groupId>
-  <artifactId>qooxdoo-archetype-desktop</artifactId>
-  <version>2.0-RC1-SNAPSHOT</version>
-  <packaging>maven-archetype</packaging>
+	<groupId>org.qooxdoo</groupId>
+	<artifactId>qooxdoo-archetype-desktop</artifactId>
+	<version>2.0-RC1-SNAPSHOT</version>
+	<packaging>maven-archetype</packaging>
 
-  <name>qooxdoo-archetype-desktop</name>
-  <description>An archetype to create a qooxdoo application</description>
+	<name>qooxdoo-archetype-desktop</name>
+	<description>An archetype to create a qooxdoo application</description>
 
-  <parent>
-    <groupId>org.qooxdoo</groupId>
-    <artifactId>qooxdoo-maven-parent</artifactId>
-    <version>1.6</version>
-  </parent>
+	<parent>
+		<groupId>org.qooxdoo</groupId>
+		<artifactId>qooxdoo-maven-parent</artifactId>
+		<version>1.6</version>
+	</parent>
 
-  <scm>
-    <connection>scm:git:git://github.com/salmon-charles/qooxdoo-archetype-desktop.git</connection>
-    <developerConnection>scm:git:git@github.com:salmon-charles/qooxdoo-archetype-desktop.git</developerConnection>
-    <url>https://github.com/salmon-charles/qooxdoo-archetype-desktop</url>
-  </scm>
+	<scm>
+		<connection>scm:git:git://github.com/salmon-charles/qooxdoo-archetype-desktop.git</connection>
+		<developerConnection>scm:git:git@github.com:salmon-charles/qooxdoo-archetype-desktop.git</developerConnection>
+		<url>https://github.com/salmon-charles/qooxdoo-archetype-desktop</url>
+	</scm>
 
-  <build>
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.archetype</groupId>
-        <artifactId>archetype-packaging</artifactId>
-        <version>2.0</version>
-      </extension>
-    </extensions>
+	<distributionManagement>
+		<site>
+			<id>ftp-charless</id>
+			<url>ftp://charless.org/qxmaven/archetype</url>
+		</site>
+	</distributionManagement>
 
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-archetype-plugin</artifactId>
-          <version>2.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
+	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.archetype</groupId>
+				<artifactId>archetype-packaging</artifactId>
+				<version>2.0</version>
+			</extension>
+			<!-- Enabling the use of FTP for site distribution -->
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>1.0-beta-6</version>
+			</extension>
+		</extensions>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<locales>en,fr</locales>
+				</configuration>
+			</plugin>
+		</plugins>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-archetype-plugin</artifactId>
+					<version>2.0</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
