--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.qooxdoo</groupId>
 	<artifactId>qooxdoo-archetype-desktop</artifactId>
-	<version>2.0-RC1</version>
+	<version>2.0-RC2-SNAPSHOT</version>
 	<packaging>maven-archetype</packaging>
 
 	<name>qooxdoo-archetype-desktop</name>
