--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@
 	<name>qooxdoo-archetype-desktop</name>
 	<description>An archetype to create a qooxdoo application</description>
 
+	<properties>
+	  <github.global.server>github</github.global.server>
+	</properties>
+
 	<parent>
 		<groupId>org.qooxdoo</groupId>
 		<artifactId>qooxdoo-maven-parent</artifactId>
@@ -51,7 +55,30 @@
 				<configuration>
 					<locales>en,fr</locales>
 				</configuration>
+				<dependencies>
+                <dependency>
+                  <groupId>org.apache.maven.doxia</groupId>
+                  <artifactId>doxia-module-markdown</artifactId>
+                  <version>1.3</version>
+                </dependency>
+              </dependencies>
 			</plugin>
+			<plugin>
+		      <groupId>com.github.github</groupId>
+		      <artifactId>site-maven-plugin</artifactId>
+		      <version>0.7</version>
+		      <configuration>
+		        <message>Creating site for ${project.version}</message>
+		      </configuration>
+		      <executions>
+		        <execution>
+		          <goals>
+		            <goal>site</goal>
+		          </goals>
+		          <phase>site</phase>
+		        </execution>
+		      </executions>
+		    </plugin>
 		</plugins>
 
 		<pluginManagement>
